crates/auto-lang/test/cookbook/errors/002_anyhow/anyhow.at
fn main() {
    let result = Ok("hello")
    is result {
        Ok(val) -> assert(val == "hello"),
        Err(e) -> assert(false)
    }
}
